# city-poster

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
city-poster/: parser_launcher.py
city-poster/app/: settings.py  urls.py
city-poster/event_handlers/: ugra_classic_event_handler.py
city-poster/eventhandlersapp/: apps.py  ugra_classic_event_handler.py
city-poster/mainapp/: admin.py  models.py  services.py  urls.py  views.py
city-poster/mainapp/management/commands/: add-initial-event-categorys.py  add-initial-event-company-profile.py
city-poster/mainapp/migrations/: 0001_initial.py
city-poster/mainapp/static/css/: style.css
city-poster/mainapp/templates/mainapp/: index.html
city-poster/mainapp/templates/mainapp/includes/: inc_footer.html  inc_header.html
city-poster/templates/: base.html
docker/development/: parser-app.dockerfile  web-app.dockerfile
event-parser/: connect_layer.py  parsers_launcher.py  settings.py  temp.py
event-parser/parsers/: __init__.py  abstractions.py  services.py  ugra_classic_event_scrapper.py
event-parser/tests/: ugra_classic_event_scrapper_test.py
